finalized dark mode settings. added dark mode to local storage. No longer reverts back to light mode on form submission or reload

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,15 @@
+html {
+    height: 100%;
+  }
+  body {
+    min-height: 100%;
+  }
+
 .dark {
     background-color: rgb(36, 35, 37);
     color: rgb(255, 255, 255);
+}
+
+.fullscreen {
+    height: 100vh;
 }
